Closed Bug 1041346 Opened 10 years ago Closed 10 years ago

MP4Demuxer should not limit number of output samples

Categories

(Core :: Audio/Video, defect)

x86_64
Windows 8.1
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla33

People

(Reporter: cpearce, Assigned: cpearce)

Details

Attachments

(2 files)

The stagefright MP4 demuxer limits the number of output samples it produces to 1 at a time. This is annoying, as the MP4Reader tries to input mulitple samples into its MediaDataDecoder, and if the MediaDataDecoder needs to buffer them for some reason this will cause the decode task queue to block waiting for the MediaDataDecoder to release its sample, but if the MediaDataDecoder requires dispatching something to the decode task queue it will fail because the decode task queue is blocked in MP4Demuxer::Demux() waiting for a sample to be made available and deadlock.
Attached patch PatchSplinter Review
Attachment #8459346 - Flags: review?(ajones)
Comment on attachment 8459346 [details] [diff] [review]
Patch

Review of attachment 8459346 [details] [diff] [review]:
-----------------------------------------------------------------

LGTM. Can we remove MediaBufferGroup altogether?
Attachment #8459346 - Flags: review?(ajones) → review+
Attachment #8459348 - Flags: review?(ajones) → review+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: