Bug 1041346 - Don't limit number of samples stagefright mp4 demuxer can output. r=kentuckyfriedtakahe